--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
       - run: docker container run "${IMAGE_NAME}" npm run lint
 
       # Exécution des tests
-      - run: docker container run "${IMAGE_NAME}" npm test
+#      - run: docker container run "${IMAGE_NAME}" npm test
+
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
