--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Bonjour
+name: CI PR Checks
 on:
   pull_request:
     branches:
       - main
 jobs:
-  dire_bonjour:
+  build:
     runs-on: ubuntu-22.04
     env:
       IMAGE_NAME: "mynode"
@@ -23,8 +23,7 @@ jobs:
       - run: docker container run "${IMAGE_NAME}" npm run lint
 
       # Exécution des tests
-#      - run: docker container run "${IMAGE_NAME}" npm test
-
+      - run: docker container run "${IMAGE_NAME}" npm test
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
