--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sayhello",
   "version": "1.0.0",
   "description": "A web application which says hello",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "lint": "jshint index.js",
-    "start": "node index.js",
+    "lint": "jshint src/index.js",
+    "start": "node src/index.js",
     "test": "jest"
   },
   "author": "",
