--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,16 @@ jobs:
 
       # Exécution des tests
       - run: docker container run "${IMAGE_NAME}" npm test
-      -
-        name: Login to Docker Hub
+
+      # Connexion à Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: "moha210"
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      # Build et push pour les tags
+      - name: Build and push for tags
         uses: docker/build-push-action@v6
 
         if: startsWith(github.ref, 'refs/tags/')
@@ -39,8 +41,8 @@ jobs:
           push: true
           context: "./"
           tags: moha210/sayhello:${{ github.ref_name }}
-      -
-        name: Build and push If Main UNSTABLE
+
+      - name: Build and push for main (unstable)
         uses: docker/build-push-action@v6
         if: startsWith(github.ref, 'refs/heads/main')
         with:
