--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: CI PR Checks
+name: Github action CI/CD
 on:
   pull_request:
     branches:
       - main
 jobs:
-  CI_PR_Checks:
+  build:
     runs-on: ubuntu-22.04
     env:
       IMAGE_NAME: "mynode"
@@ -24,16 +24,14 @@ jobs:
 
       # Exécution des tests
       - run: docker container run "${IMAGE_NAME}" npm test
-
-      # Connexion à Docker Hub
-      - name: Login to Docker Hub
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: "moha210"
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Build et push pour les tags
-      - name: Build and push for tags
+      -
+        name: Build and push
         uses: docker/build-push-action@v6
 
         if: startsWith(github.ref, 'refs/tags/')
@@ -41,8 +39,8 @@ jobs:
           push: true
           context: "./"
           tags: moha210/sayhello:${{ github.ref_name }}
-
-      - name: Build and push for main (unstable)
+      -
+        name: Build and push If Main UNSTABLE
         uses: docker/build-push-action@v6
         if: startsWith(github.ref, 'refs/heads/main')
         with:
