--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,90 @@
-name: Github action CI/CD
+name: GitHub Action CI/CD
+
 on:
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
+
 jobs:
-  ci_pr_checks:
+  ########################################################
+  # Job 1 : lint
+  # - Vérification du Dockerfile (Hadolint)
+  # - Build de l'image Docker
+  # - Lint du code (npm run lint) depuis l'image
+  ########################################################
+  lint:
     runs-on: ubuntu-22.04
     env:
       IMAGE_NAME: "mynode"
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Lint du Dockerfile
-      - uses: hadolint/hadolint-action@v3.1.0
+      - name: Lint Dockerfile
+        uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: ./Dockerfile
 
-      # Construction de l’image Docker
-      - run: docker image build --tag="${IMAGE_NAME}" ./
+      - name: Build Docker image
+        run: docker image build --tag="${IMAGE_NAME}" ./
 
-      # Lint du code source
-      - run: docker container run "${IMAGE_NAME}" npm run lint
+      - name: Lint code
+        run: docker container run "${IMAGE_NAME}" npm run lint
+  ########################################################
+  # Job 2 : test
+  # - Attend que le job lint ait réussi
+  # - Reconstruit l'image Docker (ou vous pouvez la conserver si vous implémentez un cache)
+  # - Lance vos tests (npm test) à l’intérieur du conteneur
+  ########################################################
+  test:
+    runs-on: ubuntu-22.04
+    needs: [lint]
+    env:
+      IMAGE_NAME: "mynode"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Exécution des tests
-      - run: docker container run "${IMAGE_NAME}" npm test
-      -
-        name: Login to Docker Hub
+      - name: Build Docker image
+        run: docker image build --tag="${IMAGE_NAME}" ./
+
+      - name: Run tests
+        run: docker container run "${IMAGE_NAME}" npm test
+
+  ########################################################
+  # Job 3 : deploy
+  # - Attend que les tests soient passés (job test)
+  # - Se connecte à Docker Hub
+  # - Pousse l'image avec un tag versionné si on est sur un tag
+  # - Pousse l'image avec un tag "unstable" si on est sur main
+  ########################################################
+  deploy:
+    runs-on: ubuntu-22.04
+    needs: [test]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: "moha210"
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
 
-        name: Build and push
-        uses: docker/build-push-action@v6
-
+      - name: Build and push if tag
         if: startsWith(github.ref, 'refs/tags/')
+        uses: docker/build-push-action@v6
         with:
           push: true
           context: "./"
           tags: moha210/sayhello:${{ github.ref_name }}
-      -
-        name: Build and push If Main UNSTABLE
-        uses: docker/build-push-action@v6
+
+      - name: Build and push if main
         if: startsWith(github.ref, 'refs/heads/main')
+        uses: docker/build-push-action@v6
         with:
           push: true
           context: "./"
